Adding Controller Test